--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -10,5 +10,22 @@ body {
 	font-family: 'Rubik', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-size: 16px;
 	line-height: 1.5;
+	color: #eaeaea;
 
+	background-color: #0f0f0f;
+}
+
+h1 {
+	font-size: 2.5rem;
+	font-weight: 700;
+}
+
+h2 {
+	font-size: 2rem;
+	font-weight: 700;
+}
+
+h3 {
+	font-size: 1.5rem;
+	font-weight: 700;
 }
